# ainow

./: .env.example  .gitignore  LICENSE  README.md  comfort16GB.bat  git.md  main.py  optimal16GB.bat  package-lock.json  package.json  pyproject.toml  requirements.txt  start-0.8b.cmd  start-27b.cmd  start-2b.cmd  start-4b.cmd  start-9b.cmd  start-gemma.cmd  todo.md
.github/workflows/: build.yml
ainow/: __init__.py  agent.py  conversation.py  log.py  server.py  state.py  types.py
ainow/services/: __init__.py  browser_player.py  fish_tts.py  flux.py  model_manager.py  tools.py  tts.py  tts_pool.py  whisper_stt.py
ainow/static/: index.html
benchmarks/: .gitignore  aider_polyglot.py  mtp_bench.py
docs/: agents-mcp.md  api-plan.md  benchmarks.md  cli.md  models.md  setup.md
scripts/: build-llama-server.bat  build-llama-server.sh  visualize.py
src/: agent.py  cli.py  conversation.py  log.py  path_security.py  server.py  state.py  tracer.py  tui.py  tui_fullscreen.py  tui_textual.py  types.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: agent.rs  conversation.rs  lib.rs  llm.rs  model_manager.rs  server.rs  settings.rs  standalone.rs  state.rs  tools.rs  types.rs
src/patches/memory-db/: cli.js  package.json  skill.md
src/services/: agents.py  browser_player.py  live_conversations.py  llm.py  local_tts.py  mcp.py  model_manager.py  scheduler.py  tool_call_parser.py  tools.py  whisper_stt.py
src/skill_knowledge/: __init__.py  _index.md  algo_binary_search.md  algo_dfs_bfs.md  algo_dp.md  algo_hash_tree.md  algo_sorting.md  algo_two_pointers.md  debugging.md  file_edits.md  git_workflow.md  python_testing.md
src/static/: index.html
tests/: test_model_manager.py  test_server_security.py  test_tools_paths.py  test_update.py
