[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ainow"
version = "0.1.0"
description = "Local-first AI agent framework — chat, voice, vision, coding, scheduled tasks, MCP."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dynamic = ["dependencies"]

[project.scripts]
ainow = "src.cli:main"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
