[package]
name = "app"
version = "0.1.0"
description = "AINow - AI Voice Assistant"
authors = ["jbenguira"]
license = "Apache-2.0"
repository = "https://github.com/autonomous-lab/ainow"
edition = "2021"
rust-version = "1.77.2"
default-run = "app"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ainow-server"
path = "src/standalone.rs"

[features]
default = ["desktop"]
desktop = ["tauri", "tauri-plugin-log", "tauri-build"]

[build-dependencies]
tauri-build = { version = "2.5.6", optional = true }

[dependencies]
tauri = { version = "2.10.3", features = ["tray-icon"], optional = true }
tauri-plugin-log = { version = "2", optional = true }
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
anyhow = "1.0"
dirs = "5"
glob = "0.3"
